# ICTCLASTokenizer

./: make_egg.sh
src/: CMakeLists.txt  pyictclas.cpp  setup.py  tokenizer.py
src/ictclas/: chinese.raw.txt  chinese.seg.txt  main.cpp
src/ictclas/Source/: Dictionary.cpp  DynamicArray.cpp  Queue.cpp  Result.cpp  Result.h  SegGraph.cpp  SegGraph.h  Segment.cpp  Segment.h  Span.cpp  Span.h  UnknowWord.cpp  UnknowWord.h
